fix dockpanel headers not showing up right

--- a/src/Juniper.TypeScript/@juniper-lib/widgets/DockPanel/styles.css
+++ b/src/Juniper.TypeScript/@juniper-lib/widgets/DockPanel/styles.css
@@ -29,6 +29,7 @@
     .dock.cell > .header {
         margin: auto 7px;
         grid-area: 1/1;
+        width: 100%;
     }
 
     .dock.cell > .closer {
